add edit endpoints
